# tree-calculus

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: BREAKING-RECORDS.md  README.md  parallel-and.ternary  parallel-equal.ternary  parallel-frontier.sh  parallel.sh  run-one.sh  run.sh
conventions/: README.md
evaluators/typescript/: package-lock.json  package.json
implementation/asm/: README.md  build.sh  sizes.txt  test.mjs
implementation/cpp/: .gitignore  compile.sh  eager-rc.hpp  eager-stacks.hpp  eager-ternary-len.hpp  eager-ternary-nil-32.hpp  eager-ternary-nil-mmap-32-peek.hpp  eager-ternary-nil-mmap-32.hpp  eager-ternary-nil-mmap-peek.hpp  eager-ternary-nil-mmap-vm-32.hpp  eager-ternary-nil-mmap-vm.hpp  eager-ternary-nil-mmap.hpp  eager-ternary-nil-vm-32.hpp  eager-ternary-nil-vm.hpp  eager-ternary-nil.hpp  eager-ternary-ref.hpp  eager-ternary-vm.hpp  eager-ternary.hpp  eager-value-mem-peek.hpp  eager-value-mem.cpp  eager-value-mem.hpp  evaluator.hpp  frontier-reduce.cpp  lazy-app-stream.hpp  lazy-rc.hpp  main.cpp  parallel-frontier.cpp  parallel-packed.cpp  (+6 more)
implementation/ocaml/: README.md  dune-project
implementation/ocaml/lib/: dune  eager_value_adt.ml  eager_value_adt.mli  marshal.ml  marshal.mli  memoize.ml  memoize.mli  of_sexp.ml  of_sexp.mli  sexp_of.ml  sexp_of.mli  stepper.ml  stepper.mli  tree.ml  tree.mli  tree_builder.ml  tree_builder.mli
implementation/ocaml/lib/ppx_tree_conv/: dune  ppx_of_tree.ml  ppx_tree_of.ml  ppx_tree_of.mli
implementation/ocaml/test/: dune
reduction-rules/: README.md  overview.html
(+126 files in other folders)
